# belle

./: .gitignore  Cargo.toml  belle-pkg.toml  package-schema.toml
.github/workflows/: release.yml  test.yml
src/: cli.rs  cli_schema.rs  config.rs  environment.rs  fetch.rs  isabelle.rs  lib.rs  main.rs  registry.rs  resolver.rs  util.rs
src/cli/: config.rs  environment.rs  fetch.rs  isabelle.rs  package.rs  registry.rs  schema.rs
src/config/: config.rs  mod.rs  storage.rs  types.rs
src/environment/: environment.rs  manager.rs  serialiser.rs  types.rs
src/fetch/: _split.rs  afp.rs  afp_metadata.rs  afp_repo.rs  client.rs  local.rs  metadata.rs  mod.rs  remote.rs  types.rs
src/fetch/afp_metadata/: dependency.rs  metadata.rs  parser.rs  schema.rs
src/fetch/metadata/: dependency.rs  metadata.rs  mod.rs  parser.rs  schema.rs  types.rs
src/isabelle/: isabelle.rs  types.rs
src/registry/: README.md  mod.rs  package.rs  registry.rs  types.rs
src/resolver/: error_wrapper.rs  mod.rs  resolver.rs
