[package]
name = "belle"
version = "0.1.0"
edition = "2024"

[dependencies]
pubgrub = "0.3.0"
rustc-hash = "2.1.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
# ? what features do i actually need from tokio?
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
tempfile = "3.25.0"
bytes = "1.11.1"
zip = "8.0.0"
