[package]
name = "belle"
version = "0.1.0"
edition = "2024"
authors = ["Joel Cutler <joelcutler108@gmail.com>"]
description = "// todo description"

[dependencies]
pubgrub = { version = "0.3.0", features = ["serde"] }
rustc-hash = "2.1.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
# ? what features do i actually need from tokio?
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
tempfile = "3.25.0"
bytes = "1.11.1"
zip = "8.1.0"
nom = "8.0.0"
clap = { version = "4.5.59", features = ["derive"] }
tabled = "0.20.0"
walkdir = "2.5.0"
