[package]
name = "belle"
version = "0.1.0"
edition = "2024"
authors = ["Joel Cutler <joelcutler108@gmail.com>"]
description = "Package Manager for Isabelle/HOL"

[dependencies]
pubgrub = { version = "0.3.0", features = ["serde"] }
rustc-hash = "2.1.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["full"] }
toml = "0.9.8"
bytes = "1.11.1"
zip = "8.1.0"
clap = { version = "4.5.60", features = ["derive"] }
walkdir = "2.5.0"
indicatif = "0.18.4"
console = "0.16.2"
dirs = "6.0.0"
junction = "1.4.2"
url = { version = "2.5.8", features = ["serde"] }
